# claude-code-camp-2026-Q2

./: .gitignore  chat.py  client.py  llama_cli.py  llama_gateway.py  package-lock.json
.boukensha/: settings.yaml
.boukensha/sessions/: 20260723T015125Z-c3b2968f.jsonl  20260723T023151Z-bdb8b4f8.jsonl  20260723T023214Z-6f175a91.jsonl  20260723T023242Z-4256786e.jsonl  20260723T163327Z-fc838036.jsonl  20260723T165227Z-fdc914fd.jsonl  20260723T165434Z-05c57589.jsonl  20260723T171025Z-6c7ade59.jsonl  20260723T172623Z-b9b8b095.jsonl  20260723T172655Z-c237c6ad.jsonl  20260723T173040Z-7e58c0c8.jsonl  20260723T183745Z-1e21c78b.jsonl  20260723T183840Z-6830cc76.jsonl  20260723T184435Z-04d36f3f.jsonl  20260723T184823Z-c97c0de9.jsonl  20260723T201348Z-af821ac7.jsonl  20260723T201414Z-adeff200.jsonl  20260723T201951Z-a784822b.jsonl  20260723T212200Z-4236a2b9.jsonl  20260723T213119Z-e0983234.jsonl  20260723T213535Z-bc78fd09.jsonl  20260723T213644Z-3cdc52c7.jsonl  20260724T003911Z-3ff40ff8.jsonl  20260724T004641Z-3a5f2f98.jsonl  20260724T005017Z-5cc72c09.jsonl  20260724T005400Z-07ca07fd.jsonl  20260724T010422Z-b99a925e.jsonl  20260724T010735Z-86ef63fe.jsonl  20260724T013510Z-fcf63be0.jsonl  20260724T121919Z-94192e0c.jsonl  20260724T121946Z-6b83cd9d.jsonl  20260724T130314Z-afeeeb26.jsonl  20260724T132707Z-e89199b1.jsonl  20260724T132907Z-7275d4b7.jsonl  (+4 more)
.claude/: settings.local.json
docs/: 0_preweek.md  explore_architectures.md
week0_explore/: CHALLENGES.md  HOW_TO_PLAY.md
week1_baseline/python/00_config/: README.md  pyproject.toml
week1_baseline/python/00_config/examples/: example.py
week1_baseline/python/00_config/src/boukensha.egg-info/: SOURCES.txt
week1_baseline/python/01_struct_skeleton/: README.md  pyproject.toml
week1_baseline/python/01_struct_skeleton/examples/: example.py
week1_baseline/python/01_struct_skeleton/src/boukensha/: __init__.py  config.py
week1_baseline/python/01_struct_skeleton/src/boukensha.egg-info/: PKG-INFO  SOURCES.txt
week1_baseline/python/02_the_registry/: README.md  pyproject.toml
week1_baseline/python/02_the_registry/examples/: example.py
week1_baseline/python/02_the_registry/src/boukensha/: __init__.py  config.py  errors.py
week1_baseline/python/02_the_registry/src/boukensha/tasks/: base.py
week1_baseline/python/03_prompt_builder/: README.md  pyproject.toml
week1_baseline/python/03_prompt_builder/examples/: example.py
week1_baseline/python/03_prompt_builder/src/boukensha/: __init__.py  errors.py  message.py  prompt_builder.py  registry.py
week1_baseline/python/03_prompt_builder/src/boukensha.egg-info/: PKG-INFO  SOURCES.txt
week1_baseline/python/03_prompt_builder/src/boukensha/backends/: anthropic.py  ollama.py  ollama_cloud.py
week1_baseline/python/03_prompt_builder/src/boukensha/tasks/: __init__.py
week1_baseline/python/04_api_client/: pyproject.toml
week1_baseline/python/04_api_client/examples/: example.py
week1_baseline/python/04_api_client/src/boukensha/: __init__.py  client.py  context.py  errors.py
week1_baseline/python/04_api_client/src/boukensha.egg-info/: PKG-INFO  SOURCES.txt
week1_baseline/python/04_api_client/src/boukensha/backends/: gemini.py  openai.py
week1_baseline/python/05_agent_loop/: pyproject.toml
week1_baseline/python/05_agent_loop/examples/: example.py
week1_baseline/python/05_agent_loop/src/boukensha/: __init__.py  agent.py  errors.py
week1_baseline/python/05_agent_loop/src/boukensha.egg-info/: PKG-INFO  SOURCES.txt
week1_baseline/python/05_agent_loop/src/boukensha/backends/: __init__.py
week1_baseline/python/06_the_logger/: README.md  pyproject.toml
week1_baseline/python/06_the_logger/examples/: example.py
week1_baseline/python/06_the_logger/src/boukensha/: __init__.py  agent.py  context.py  logger.py  tool.py
week1_baseline/python/06_the_logger/src/boukensha.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
week1_baseline/python/07_the_run_dsl/: README.md  pyproject.toml
week1_baseline/python/07_the_run_dsl/examples/: example.py
week1_baseline/python/07_the_run_dsl/src/boukensha/: __init__.py  errors.py  logger.py  prompt_builder.py  run.py  run_dsl.py  state.py
week1_baseline/python/07_the_run_dsl/src/boukensha.egg-info/: PKG-INFO  SOURCES.txt
week1_baseline/python/07_the_run_dsl/src/boukensha/backends/: anthropic.py  gemini.py  ollama.py
week1_baseline/python/07_the_run_dsl/src/boukensha/tasks/: base.py
week1_baseline/python/08_the_repl_loop/: README.md  pyproject.toml
week1_baseline/python/08_the_repl_loop/src/boukensha/: client.py  logger.py
week1_baseline/python/08_the_repl_loop/src/boukensha.egg-info/: PKG-INFO  requires.txt
week1_baseline/python/08_the_repl_loop/src/boukensha/backends/: openai.py
week1_baseline/python/09_global_executable/: README.md  pyproject.toml  test_loader.py
week1_baseline/python/09_global_executable/examples/: example.py
week1_baseline/python/09_global_executable/src/boukensha/: agent.py  boukensha_loader.py  message.py  repl.py  run_dsl.py
week1_baseline/python/09_global_executable/src/boukensha.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
week1_baseline/python/09_global_executable/src/boukensha/backends/: ollama_cloud.py
week1_baseline/python/10_standard_tool_library/: README.md  pyproject.toml
week1_baseline/python/10_standard_tool_library/examples/: example.py
week1_baseline/python/10_standard_tool_library/src/boukensha/: __init__.py
week1_baseline/python/10_standard_tool_library/src/boukensha.egg-info/: PKG-INFO  SOURCES.txt
week1_baseline/python/10_standard_tool_library/src/boukensha/backends/: base.py
week1_baseline/python/10_standard_tool_library/src/boukensha/tasks/: player.py
week1_baseline/python/10_standard_tool_library/src/boukensha/tools/: __init__.py  file_system.py  shell.py
(+59 files in other folders)
