[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boukensha"
version = "0.1.0"
description = "Boukensha configuration library"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
