[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boukensha"
version = "0.1.0"
description = "Boukensha struct skeleton - tool, message, and context data structures"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["src"]
