[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boukensha"
version = "0.4.0"
description = "Boukensha API client - makes HTTP requests to LLM APIs with retry logic"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["src"]
