[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boukensha"
version = "0.7.0"
description = "Boukensha run DSL — a single entry point that wires context, registry, backend, prompt builder, client, logger, and agent together"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["src"]
