[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boukensha"
version = "0.8.0"
description = "Boukensha agent loop with interactive REPL — tracks iterations, API calls, and responses to JSONL"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["src"]
