[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boukensha"
version = "0.9.0"
description = "Boukensha global executable — run any step version via BOUKENSHA_PATH or ~/.boukensharc"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "python-dotenv",
]

[project.scripts]
boukensha = "boukensha.boukensha_loader:load_and_start_repl"

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["src"]
